add count register/login/logout/show current user